# STU_KB

./: .env.example  .gitignore  01_ler_docx.py  02_chunk_docx.py  03_embeddings_teste.py  04_faiss_index_e_busca.py  05_rag_terminal.py  README.md  app_streamlit.py  kb_config.py  kb_retrieval.py  pyproject.toml  render.yaml  requirements.txt  search.py  vectorize.py
data_index/: kb.faiss  kb_meta.json
